@@ -52,6 +52,9 @@ Alan Ezust, and Dale Anson for contributing to this release.
 }}}
 {{{ Miscellaneous
 
+- Store rules in an array instead of a Map avoiding computations
+  (Matthieu Casanova)
+
 - Store the glyph width in the GlyphCache to make token marking faster
   (Matthieu Casanova)
 
